force-app/main/default/objects/Contrato__c/fields/Anticipo_financiero__c.field-meta.xml
<CustomField>
    <fullName>Anticipo_financiero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anticipo financiero</label>
    <type>Checkbox</type>
</CustomField>