force-app/main/default/objects/Contrato__c/fields/Concepto__c.field-meta.xml
<CustomField>
    <fullName>Concepto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concepto</label>
    <referenceTo>Concepto__c</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>