force-app/main/default/objects/Contrato__c/fields/Condiciones_comerciales__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_comerciales__c</fullName>
    <label>Condiciones comerciales</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>