force-app/main/default/objects/Contrato__c/fields/Contacto_principal__c.field-meta.xml
<CustomField>
    <fullName>Contacto_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>