force-app/main/default/objects/Contrato__c/fields/Contacto_secundario__c.field-meta.xml
<CustomField>
    <fullName>Contacto_secundario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto secundario</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contratos1</relationshipName>
    <type>Lookup</type>
</CustomField>