force-app/main/default/objects/Contrato__c/fields/Controla_avance_fisico__c.field-meta.xml
<CustomField>
    <fullName>Controla_avance_fisico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Controla avance físico</label>
    <type>Checkbox</type>
</CustomField>