force-app/main/default/objects/Contrato__c/fields/Mayores_costos__c.field-meta.xml
<CustomField>
    <fullName>Mayores_costos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mayores costos</label>
    <type>Checkbox</type>
</CustomField>