force-app/main/default/objects/Contrato__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moneda</label>
    <referenceTo>Moneda__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>