force-app/main/default/objects/Contrato__c/fields/Monto_anticipo_financiero__c.field-meta.xml
<CustomField>
    <fullName>Monto_anticipo_financiero__c</fullName>
    <label>Monto anticipo financiero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>