force-app/main/default/objects/Contrato__c/fields/Orden_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de compra</label>
    <referenceTo>Orden_de_compra__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>