force-app/main/default/objects/Contrato__c/fields/Plazo__c.field-meta.xml
<CustomField>
    <fullName>Plazo__c</fullName>
    <label>Plazo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>