force-app/main/default/objects/Contrato__c/fields/Poliza_de_caucion__c.field-meta.xml
<CustomField>
    <fullName>Poliza_de_caucion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Póliza de caución</label>
    <type>Checkbox</type>
</CustomField>