force-app/main/default/objects/Contrato__c/fields/Porcentaje_anticipo_financiero__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_anticipo_financiero__c</fullName>
    <label>Porcentaje anticipo financiero</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>