force-app/main/default/objects/Contrato__c/fields/Porcentaje_poliza_de_caucion__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_poliza_de_caucion__c</fullName>
    <label>Porcentaje póliza de caución</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>