force-app/main/default/objects/Contrato__c/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubro</label>
    <referenceTo>Rubro__c</referenceTo>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>