force-app/main/default/objects/Contrato__c/fields/Verificado__c.field-meta.xml
<CustomField>
    <fullName>Verificado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Validar si el Reporte de Avance en PBI esta OK. En ese caso se deja de utilizar el excel.</inlineHelpText>
    <label>Verificado</label>
    <type>Checkbox</type>
</CustomField>