force-app/main/default/objects/Contrato__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Obra__c</columns>
    <columns>Proveedor__c</columns>
    <columns>Concepto__c</columns>
    <columns>Monto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>